# Hospital-Management-System

./: CMakeLists.txt  List.hpp  Node.hpp  PatientHealthInfo.hpp  PatientLoginData.hpp  README.md  SystemMenu.cpp  header.hpp  main.cpp
